# avatar

./: CMakeLists.txt  README  avatar.cpp  avatar.h  eyes_builder.cpp  eyes_builder.h  mouth_builder.cpp  mouth_builder.h  timer.h
data/: export_eyes_pieces.bash  layers2pngs.bash
